@@ -32,7 +32,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -63,7 +62,7 @@ public class JsExecutionService {
             .map(ProjectGrid::getWidgets)
             .flatMap(Collection::stream)
             .map(this::createJsExecutionByProjectWidget)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
